UtahLiveDataTest/src/objects/PaymentRequest__c.object
<CustomObject>
    <fields>
        <fullName>ProjectEndDate__c</fullName>
        <formula>Award__r.ProjectPeriodEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStartDate__c</fullName>
        <formula>Award__r.ProjectPeriodStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderNumber__c</fullName>
        <formula>Award__r.PurchaseOrderNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecallComment__c</fullName>
        <label>Recall Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceiptsUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receipts Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecipientId__c</fullName>
        <formula>Grant__r.InternalOrganization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientOrganizationCode__c</fullName>
        <formula>Grant__r.InternalOrganization__r.Code__c</formula>
        <label>Recipient Organization Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientOrganization__c</fullName>
        <formula>Grant__r.InternalOrganization__r.Name</formula>
        <label>Recipient Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientsAccountNumber__c</fullName>
        <description>Recipient&apos;s account number or identifying number.</description>
        <inlineHelpText>Recipient&apos;s account number or identifying number.</inlineHelpText>
        <label>Recipient&apos;s Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefreshBudgetCategory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RefreshBudgetCategory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReimbursementPaymentRequested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reimbursement Payment Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RejectComments__c</fullName>
        <label>RejectComments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remittanceaddress__c</fullName>
        <formula>Grant__r.InternalOrganization__r.FullBillingAddress__c</formula>
        <label>Remittance address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestAmountForFormula__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RequestAmountForFormula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequestEndDate__c</fullName>
        <label>Request End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestStartDate__c</fullName>
        <label>Request Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestSubmittedDate__c</fullName>
        <label>Request Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedAmountthisAction__c</fullName>
        <label>Requested Amount this Action</label>
        <summarizedField>PaymentBudgetCategory__c.RequestedExpense__c</summarizedField>
        <summaryForeignKey>PaymentBudgetCategory__c.PaymentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RequiredProgramManagerApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field drives Program Manager Approval Step on this object Approval Process.</description>
        <label>Required Program Manager Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendBackComment__c</fullName>
        <label>Send Back Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignedBy__c</fullName>
        <label>Signed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpendType__c</fullName>
        <formula>Award__r.SpendType__c</formula>
        <label>Spend Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted to Grantor</fullName>
                </value>
                <value>
                    <fullName>Approval 1</fullName>
                </value>
                <value>
                    <fullName>Approval 2</fullName>
                </value>
                <value>
                    <fullName>Approval 3</fullName>
                </value>
                <value>
                    <fullName>Approval 4</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Sent to FINET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmissionDate__c</fullName>
        <inlineHelpText>This field used to display submission date of payment request</inlineHelpText>
        <label>SubmissionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TermConditionSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term Condition Schedule</label>
        <referenceTo>TermConditionSchedule__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TermStartDate__c</fullName>
        <label>TermStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermsAgreement__c</fullName>
        <label>TermsAgreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalApprovedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAwardedAmount__c</fullName>
        <formula>AwardedAmount__c + AdminAwardedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMatchSpent__c</fullName>
        <label>Total Match Spent</label>
        <summarizedField>MatchTracker__c.Amount__c</summarizedField>
        <summaryForeignKey>MatchTracker__c.PaymentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalRequestedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRequestedAmountthisAction__c</fullName>
        <formula>RequestedAmountthisAction__c + AdminRequestedExpense__c + PaymentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Amount this Action</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TypeOfPayment2__c</fullName>
        <description>This field is used in Request for advance or Reimbursement</description>
        <label>Type Of Payment2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfPayment__c</fullName>
        <description>This field is used in Request for Advance or Reimbursement.</description>
        <label>Type Of Payment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance</fullName>
                    <default>true</default>
                    <label>Advance</label>
                </value>
                <value>
                    <fullName>Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Expenditure</fullName>
                </value>
                <value>
                    <fullName>Waiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USBELEACostRate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>USBELEACostRate</label>
        <referenceTo>USBELEACostRate__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USBEPathway__c</fullName>
        <label>USBEPathway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedYTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated YTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <formula>TEXT($User.UserType)</formula>
        <label>UserType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoucherNumber__c</fullName>
        <label>Voucher Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaiverConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WaiverConfirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YTDAdvancePaid__c</fullName>
        <formula>Award__r.YTDAdvancePaid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Advance Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDDisbursedAmount__c</fullName>
        <label>YTD Disbursed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDEarnedAmount__c</fullName>
        <label>YTD Earned Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDReimbursementPaid__c</fullName>
        <formula>Award__r.YTDReimbursementPaid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Reimbursement Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>awardedAmountForLSNA__c</fullName>
        <formula>Award__r.ObligatedAwardAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>awardedAmountForLSNA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payment Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Requests</pluralLabel>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>GeneralShare__c</fullName>
        <label>General Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>OwnerReplacement__c</fullName>
        <label>Owner Replacement</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoApplicant__c</fullName>
        <label>Share to Applicant</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoApprover__c</fullName>
        <label>Share to Approver</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoFiscalOfficer__c</fullName>
        <label>Share to Fiscal Officer</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoOrganization__c</fullName>
        <label>Share to Organization</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoProgramManager__c</fullName>
        <label>Share to Program Manager</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoProgramOwner__c</fullName>
        <label>Share to Program Owner</label>
    </sharingReasons>
    <validationRules>
        <fullName>Admin_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AdminRequestedExpense__c &gt; RequestedAmountthisAction__c * 0.05</errorConditionFormula>
        <errorMessage>Admin Requested Expense Can Not be Greater than 5% of Total Requested Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Date_Validation</fullName>
        <active>true</active>
        <description>Billing date validation for Advance</description>
        <errorConditionFormula>TEXT(Type__c) == &apos;Advance&apos; &amp;&amp;  (BillingStartDate__c &lt;  Award__r.ProjectPeriodStartDate__c || BillingStartDate__c &gt; Award__r.ProjectPeriodEndDate__c ||
BillingEndDate__c &lt;  Award__r.ProjectPeriodStartDate__c || BillingStartDate__c &gt; Award__r.ProjectPeriodEndDate__c )</errorConditionFormula>
        <errorMessage>Billing start Date/End Date should be within Project Start Date/End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Date_Validation2</fullName>
        <active>true</active>
        <description>Billing date validation for Advance</description>
        <errorConditionFormula>BillingStartDate__c &gt; BillingEndDate__c</errorConditionFormula>
        <errorMessage>Billing Start Date cannot be greater than Billing End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OverExpenditure</fullName>
        <active>false</active>
        <errorConditionFormula>RequestedAmountthisAction__c  &gt;  AwardedAmount__c</errorConditionFormula>
        <errorMessage>Requested Amount this Action cannot be greater than Awarded Amount</errorMessage>
    </validationRules>
</CustomObject>